--- a/Presento/index.html
+++ b/Presento/index.html
@@ -355,7 +355,7 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <!--<i class="icofont-computer"></i>-->
-              <img src="assets/img/Seo.jpeg" alt="" class="image-fluid"/>
+              <img src="assets/img/Seo.jpg" alt="" class="image-fluid"/>
               <h4><a href="#">SEO</a></h4>
               <p>Improve your website ranking in Google results for keywords that matter in the digital marketing world.</p>
             </div>
@@ -363,7 +363,7 @@
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <!--<i class="icofont-chart-bar-graph"></i>-->
-              <img src="assets/img/webd.jpeg" alt="" class="image-fluid"/>
+              <img src="assets/img/Webd.jpeg" alt="" class="image-fluid"/>
               <h4><a href="#">Web Developer</a></h4>
               <p>With our customized web & designing services, we enhanced your business at the top in search engines.</p>
             </div>
